--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   validate:
-    name: Validate Changes
+    name: Validate PR Changes
     runs-on: ubuntu-latest
 
     steps:
@@ -17,54 +17,29 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "18"
-          cache: "npm"
-          cache-dependency-path: |
-            backend/package-lock.json
-            frontend/package-lock.json
 
-      - name: Install Dependencies
+      - name: Install Backend Dependencies
         run: |
           cd backend && npm ci
-          cd ../frontend && npm ci
-
-      - name: Run Linting
-        run: |
-          cd backend && (npm run lint || echo "Backend lint skipped")
-          cd ../frontend && npm run lint
-
-      - name: Type Check
-        run: |
-          cd frontend && (npm run type-check || npx tsc --noEmit)
-
-      - name: Build Check
-        run: |
-          cd frontend && npm run build
-
-      - name: Docker Build Test
-        run: |
-          docker build -t test-backend ./backend
-          docker build -t test-frontend ./frontend
-
-  size-check:
-    name: Bundle Size Check
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "18"
 
       - name: Install Frontend Dependencies
         run: |
-          cd frontend
-          npm ci
+          cd frontend && npm ci
 
-      - name: Build and Check Size
+      - name: Lint Frontend
         run: |
-          cd frontend
-          npm run build
-          echo "📦 Build completed successfully"
+          cd frontend && npm run lint
+
+      - name: Type Check Frontend
+        run: |
+          cd frontend && npx tsc --noEmit
+
+      - name: Build Frontend
+        run: |
+          cd frontend && npm run build
+
+      - name: Test Docker Builds
+        run: |
+          docker build -t test-backend ./backend
+          docker build -t test-frontend ./frontend
+          echo "✅ Docker builds successful"
